fix: aligned sticky back-to-top with left of content

--- a/Childrens-Social-Care-CPD/styles/scss/components/contents-list-with-body.scss
+++ b/Childrens-Social-Care-CPD/styles/scss/components/contents-list-with-body.scss
@@ -25,8 +25,7 @@
 }
 
 .gem-c-contents-list-with-body__link-container {
-    //margin: 0 auto;
-    padding: 0
+    padding-left: 15px;
 }
 
 @media(min-width: 40.0625em) {
@@ -61,7 +60,6 @@
 .gem-c-contents-list-with-body__link-wrapper.gem-c-contents-list-with-body__sticky-element--stuck-to-window {
     background-color: #f3f2f1;
     bottom: -1px;
-//    left: 0;
     margin: 0 auto;
     padding: 0;
     padding-left: 0;
